sjengida/c0/init_game
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/init_game/src/utils.c:836:22: error: use of undeclared identifier 'unk_429700'
memcpy( init_board, &unk_429700, sizeof( init_board)); 
                     ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/init_game/src/obj/utils.o] Error 1
